@@ -2,6 +2,7 @@ package jae;
 
 import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 
 /**
  * Реализовать метод, добавляющий к строке 1 если в ней есть повторяющиеся символы или 0 если их нет
@@ -14,6 +15,6 @@ public class AddToStringCharsDistinct {
     public static List<String> doubleString(String... values) {
         return Arrays.stream(values)
                 .map(str -> (str.length() != str.chars().distinct().count()) ? str + "1" : str + "0")
-                .toList();
+                .collect(Collectors.toList());
     }
 }
