@@ -1,11 +1,12 @@
 package stream;
 
 import java.util.List;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 public class FilterCities {
     public static void main(String[] args) {
-        List cities = Stream.of("Minsk", "Moscow", "Madrid", "Milan", "Rio", "Gomel").toList();
+        List cities = Stream.of("Minsk", "Moscow", "Madrid", "Milan", "Rio", "Gomel").collect(Collectors.toList());
         String regex = "^[Mm].+";
         getListStartedFrom(cities, regex, 2, 3).forEach(System.out::println);
     }
@@ -15,6 +16,6 @@ public class FilterCities {
                 .filter(city -> city.matches(regex))
                 .filter(city -> city.length() > cityLength)
                 .limit(limit)
-                .toList();
+                .collect(Collectors.toList());
     }
 }
